<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="485dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/White"
        android:elevation="70dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/Closetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X"
            android:textColor="@color/dark_grey"
            android:layout_gravity="end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/Popup_title2"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="1000dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/boton1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_centerInParent = "true"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:drawablePadding="16dp"
                android:text="@string/Transmitir"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="1000dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/boton2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_centerInParent = "true"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_margin="8dp"
                android:drawablePadding="16dp"
                android:text="@string/Apagartrans"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="1000dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/boton3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent = "true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_margin="8dp"
                android:drawablePadding="16dp"
                android:text="@string/Desperfectos"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>