<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_back"
            layout="@layout/toolbar_back" />

        <ImageView
            android:id="@+id/imagenUnidad"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:elevation="3dp"
            android:minHeight="200dp"
            android:scaleType="centerCrop"
            android:src="@color/dark_grey" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/txtRuta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/ruta"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ver_mapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimary"
                android:elevation="2dp"
                android:minWidth="25dp"
                android:minHeight="25dp"
                android:onClick="showMapa"
                android:padding="8dp"
                android:src="@drawable/ic_gps" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/contacto"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/expand_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="#00FFFFFF"
                android:padding="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_expand" />
        </LinearLayout>
        <!---Vista que se expande-->
        <LinearLayout
            android:id="@+id/expandable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre"
                        android:layout_marginStart="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_alignParentStart="true"/>

                    <TextView
                        android:id="@+id/txtNombreMotorista"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:text="Nombre de prueba" />
                </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefono"
                    android:layout_marginStart="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/txtTelefonoMotorista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:text="7159-9868" />
            </RelativeLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/grey" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estado de la unidad:"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="En movimiento"
                android:layout_marginStart="8dp"
                android:textColor="@color/dark_grey"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/in"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cgIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:chipSpacing="8dp">


            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/out"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:scrollbars="none"
            >
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cgOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipSpacing="8dp"
                android:layout_marginTop="8dp"
                />
        </HorizontalScrollView>

    </LinearLayout>
</ScrollView>