<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Login">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="96dp"
            android:fontFamily="@font/montserrat"
            android:letterSpacing="0.1"
            android:text="@string/loginText"
            android:textColor="@color/White"
            android:textSize="32sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/carnet"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/yellowborder"
                        android:drawableStart="@drawable/ic_account"
                        android:drawablePadding="4dp"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/hint_carne"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColor="@color/White" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/yellowborder"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="4dp"
                        android:hint="@string/hint_pass"
                        android:fontFamily="@font/montserrat"
                        android:inputType="textPassword"
                        android:textColor="@color/White"
                        android:padding="8dp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp">

                    <ImageButton
                        android:id="@+id/send"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/send_circle"
                        android:elevation="2dp"
                        android:src="@drawable/ic_send"
                        android:stateListAnimator="@null"
                        android:translationZ="2dp"
                        android:onClick="nextActivity"
                        />

                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>